<resources>
    <string name="app_name">Stock-Prediction-Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_shares">Stock Quotes</string>
    <string name="menu_slist">Stocks List</string>
    <string name="menu_pred">Predict Price</string>
    <string name="menu_cc">Currency Convert</string>
    <string name="menu_news">News</string>
    <string name="menu_about">About Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="predictDropDown">dropDownMenu</string>
    <string-array name="stock">
        <item>Nestle Beverages</item>
        <item>Ford Motor Company</item>
        <item>Apple Inc</item>
    </string-array>
    <string-array name="stockCode">
        <item>View Stock Symbols</item>
        <item>View Stock Names</item>
        <item>View Stock Symbols and Close Price</item>
        <item>View Entire List</item>
    </string-array>
    <string name="convertDropDown">dropDownMenu</string>
    <string-array name="currency">
        <item>Taka</item>
        <item>USD</item>
        <item>Euro</item>
        <item>Yen</item>
        <item>Rupee</item>
    </string-array>
    <string name="title_activity_news">News</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>