<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_shares"
            android:icon="@drawable/shares"
            android:title="@string/menu_shares" />
        <item
            android:id="@+id/nav_slist"
            android:icon="@drawable/list"
            android:title="@string/menu_slist" />
        <item
            android:id="@+id/nav_pred"
            android:icon="@drawable/predict"
            android:title="@string/menu_pred" />
        <item
            android:id="@+id/nav_cc"
            android:icon="@drawable/currency"
            android:title="@string/menu_cc" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
    </group>
</menu>